# ragforge

./: .dockerignore  .env.example  .gitignore  .harness.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.local.md.example  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: README.md  settings.json  statusline.py
.claude/agents/: architecture-reviewer.md  debugger.md  mcp-integrator.md  planner.md  python-implementer.md  quality-verifier.md  security-reviewer.md  test-engineer.md
.claude/hooks/: _common.py  format_python.py  guard_mcp.py  protect_sensitive_files.py  scan_secrets.py  scan_worktree.py  session_context.py  validate_bash.py
.claude/output-styles/: engineering.md
.claude/rules/: adapters.md  api-boundaries.md  architecture.md  git-collaboration.md  idempotency.md  mcp.md  observability.md  python.md  security-privacy.md  testing.md
.claude/skills/configure-mcp/: SKILL.md
.claude/skills/create-adr/: SKILL.md
.claude/skills/debug-failure/: SKILL.md
.claude/skills/implement-change/: SKILL.md
.claude/skills/plan-change/: SKILL.md
.claude/skills/prepare-pr/: SKILL.md
.claude/skills/quality-gate/: SKILL.md
.claude/skills/review-change/: SKILL.md
.claude/skills/review-mcp/: SKILL.md
.claude/skills/scaffold-use-case/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/workflows/: review-branch.js
.github/workflows/: quality.yml
apps/api/: __init__.py
apps/dashboard/: __init__.py
configs/experiments/: benchmark-v01.yaml  embeddings-ptbr.yaml  run_embeddings_ptbr.py
datasets/corpus/: SOURCES.md
datasets/corpus/bacen/: RES-CMN-5274-2025.htm
datasets/corpus/cvm/: LEI-6385-1976.htm
datasets/corpus/lc-lgpd/: LC-105-2001.htm  LEI-13709-2018-LGPD.htm
datasets/regrag-br/: corpus_manifest.yaml  judgments.json  split.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION-PLAN.md  LLM-JUDGE-DECISION.md  LLM_OBSERVABILITY.md  MCP.md  PRIVACY.md
docs/adr/: 0001-clean-architecture.md  0002-article-level-relevance-judgments.md  0003-empirical-router-oracle.md  0004-benchmark-reproducibility-policy.md  0005-embedding-comparison-scope.md  0006-legal-structural-chunker.md  0007-llm-judge-calibration-ptbr.md  0008-streamlit-comparison-frontend.md  0009-scaffold-via-engineering-harness.md  0010-graphrag-evaluation-scope.md  0011-structural-id-collision-in-amended-norms.md  0012-benchmark-integrity-and-end-to-end-evaluation.md  0013-provider-neutral-embedding-backends.md  0014-bounded-parallel-benchmark-execution.md  0015-summary-augmented-chunking.md  0016-post-generation-citation-audit.md  0017-auditable-evidence-lineage.md  0018-independent-llm-judge-provider.md  0019-temporal-graphrag-experimental-strategy.md  README.md
docs/mcp/: managed-mcp.example.json  managed-settings.example.json
experiments/20260723T001223Z/: results.json
experiments/20260723T221236Z/: results.json
experiments/20260724T014218Z/: results.json
experiments/embeddings-ptbr/: runs.jsonl
scripts/: governance_gate.py  judge_calibration_report.py  quality_gate.py  validate_architecture.py  validate_loop_contracts.py  validate_loop_schema_vendor.py  validate_mcp_config.py  verify_run.py
scripts/_vendor_loop_schemas/: __init__.py  manifest.json  models.py  validate_contract.py
src/ragforge/: __init__.py
src/ragforge/adapters/: gemini_retry.py  llm_cache.py  provider_limiter.py  tracing.py
src/ragforge/application/: __init__.py
src/ragforge/chunking/: __init__.py  chunker.py  legal_parser.py  (+1 more)
tests/integration/: test_cross_encoder_reranker.py  test_dense_chunk_store.py  test_docling_extraction.py  test_end_to_end_retrieval.py  test_evaluation_harness.py  test_gemini_answer_generator.py  test_gemini_contextualizer.py  test_gemini_summarizer.py  test_google_gemini_embedder.py  test_graphrag.py  test_ragas_judge.py  test_sentence_transformer_embedder.py  test_sparse_chunk_store.py
tests/unit/: test_answer_harness.py  test_artifact_writer.py  test_audit_metrics.py  test_auditing_answer_generator.py  test_benchmark_run.py  test_canonical_hash.py  test_chunker.py  test_citation_accuracy.py  test_citation_audit.py  test_citation_parsing.py  test_contextual_pipeline.py  test_corpus_article_counts.py  test_cross_encoder_reranker.py  test_dense_strategy.py  test_domain_models.py  test_drm_metrics.py  test_embeddings_ports.py  test_event_log.py  test_extraction.py  test_gemini_answer_generator.py  test_gemini_contextualizer.py  test_gemini_document_summarizer.py  test_gemini_retry.py  test_gemini_summarizer.py  test_google_gemini_embedder.py  test_graph_indexing.py  test_graph_strategy.py  test_harness.py  test_html_extractor.py  test_hybrid_strategy.py  test_index_namespace.py  test_integrity.py  test_judge_calibration.py  test_judgments.py  test_legal_parser.py  test_lightrag_gemini.py  test_lineage_ports.py  test_llm_cache.py  test_logging.py  test_manifest.py  (+22 more)
(+96 files in other folders)
