[project]
name = "ragforge"
version = "0.1.0"
description = "Adaptive RAG benchmarking platform for Brazilian financial and regulatory documents"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "structlog>=25.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "langgraph>=0.4",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "opensearch-py>=2.7",
    "docling>=2.15",
    "pymupdf>=1.24",
    "ragas>=0.2",
    "sentence-transformers>=3.0",
    "lightrag-hku>=1.0",
    "streamlit>=1.40",
    "google-genai>=1.0",
]

[project.optional-dependencies]
# Opt-in LLM tracing; see docs/LLM_OBSERVABILITY.md. Install with `uv sync --extra tracing`.
tracing = [
    "langfuse>=3.0",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8",
    "mypy>=1.16",
    "pip-audit>=2.9",
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragforge"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
    "ANN",
    "D",
    "S",
]
ignore = [
    "ANN401", # Any is handled as an architecture concern and reviewed explicitly.
    "D203",   # Incompatible with D211.
    "D213",   # Google style uses D212.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "ANN"]
"scripts/**/*.py" = ["D"]
# scripts/_vendor_loop_schemas/models.py quotes its `from_dict` classmethods'
# self-referencing return annotations on purpose (see that file's own header
# comment): the quotes are load-bearing on Python 3.12/3.13 and only look
# removable to ruff's UP037 when this project's own target-version is 3.14.
# Suppressed here (not with an inline noqa) because an inline noqa becomes an
# unused-directive RUF100 error on 3.12/3.13, where UP037 never fires.
"scripts/_vendor_loop_schemas/models.py" = ["UP037"]
# legal_parser.py's marker regexes intentionally match en-dash/em-dash inciso
# separators ("I – ...") found in real CMN/BCB/CVM norm text (ADR-0006), not
# accidental confusables.
"src/ragforge/chunking/legal_parser.py" = ["RUF001"]
# Standalone experiment runner outside the src/ package: it inserts src/ onto
# sys.path before importing ragforge modules, so those imports can't be at
# the physical top of the file.
"configs/experiments/run_embeddings_ptbr.py" = ["E402", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# langfuse is the optional "tracing" extra; not installed by default, so no
# stubs are available unless a project opts in with `uv sync --extra tracing`.
module = ["langfuse"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pymupdf ships no py.typed marker / stubs under its "fitz" import name.
module = ["fitz"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# lightrag-hku ships no py.typed marker / stubs.
module = ["lightrag", "lightrag.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=src/ragforge --cov-report=term-missing -m \"not integration\""
testpaths = ["tests"]
markers = [
    "integration: tests that require real infrastructure",
    "contract: tests that verify an interface contract",
    "e2e: critical end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["src/ragforge"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.engineering-harness.quality]
source-roots = ["src"]
test-roots = ["tests"]

[tool.engineering-harness.architecture]
source-roots = ["src"]
clean-architecture = true

# LLM-SDK import guard (ADR-0009): core packages are default-deny.
# LLM/framework SDKs (openai, anthropic, langchain*, langgraph, lightrag, ragas)
# are only allowed at the edges: adapters/, generation/, routing/adapters, apps/.
[[tool.engineering-harness.architecture.boundaries]]
path = "src/ragforge/chunking"
allowed-imports = ["stdlib", "ragforge.domain", "ragforge.chunking"]

[[tool.engineering-harness.architecture.boundaries]]
path = "src/ragforge/evaluation/metrics"
allowed-imports = ["stdlib", "ragforge.domain", "numpy"]

[[tool.engineering-harness.architecture.boundaries]]
path = "src/ragforge/governance"
allowed-imports = ["stdlib", "ragforge.domain"]
